--- a/src/style/theme.scss
+++ b/src/style/theme.scss
@@ -199,7 +199,6 @@ $input-padding-x:                   12px !default;
 
 $input-color:                       $gray-600 !default;
 $input-bg:                          $white !default;
-$input-disabled-bg:                 $gray-200 !default;
 
 $input-border-color:                $border-color !default;
 $input-box-shadow:                  inset 0 1px 1px rgba($primary, .075) !default;
@@ -211,6 +210,9 @@ $input-focus-border-color:          $primary !default;
 $input-focus-box-shadow:            0 0 0 2px lighten($component-active-bg, 25%) !default;
 
 $input-hover-border-color:          $input-focus-border-color !default;
+$input-disabled-bg:                 $gray-200 !default;
+$input-disabled-opacity:            .75 !default;
+$input-disabled-border-color:       darken($input-border-color, 10%);
 
 // Calendar
 //
@@ -243,6 +245,10 @@ $calendar-panel-shadow:             0 2px 8px rgba($black, .25) !default;
 $calendar-panel-padding:            12px !default;
 $calendar-panel-transition:         transform 300ms $ease-fade, opacity 300ms $ease-fade !default;
 
+$calendar-disabled-bg:              $input-disabled-bg !default;
+$calendar-disabled-opacity:         $input-disabled-opacity !default;
+$calendar-disabled-border-color:    $input-disabled-border-color !default;
+
 // Select
 //
 $select-width:                      220px !default;
@@ -264,7 +270,10 @@ $select-option-hover-bg:            $calendar-item-hover-bg !default;
 $select-option-active-bg:           $calendar-time-active-bg !default;
 $select-option-height:              $calendar-time-item-height !default;
 $select-option-transition:          background 300ms ease !default;
-$select-disabled-opacity:           1 !default;
+
+$select-disabled-bg:                $input-disabled-bg !default;
+$select-disabled-opacity:           $input-disabled-opacity !default;
+$select-disabled-border-color:      $input-disabled-border-color !default;
 
 // Checkbox
 //
