! feat: select add inputValue

--- a/src/select/style.scss
+++ b/src/select/style.scss
@@ -118,6 +118,7 @@ $select-prefix: 'dk-select';
     &-disabled {
       color: lighten($select-color, 20%);
       cursor: not-allowed;
+      transition: none;
 
       &:hover {
         background: $white;
