--- a/src/style/theme.scss
+++ b/src/style/theme.scss
@@ -280,6 +280,7 @@ $select-option-hover-bg:            $calendar-item-hover-bg !default;
 $select-option-active-bg:           $calendar-time-active-bg !default;
 $select-option-height:              $calendar-time-item-height !default;
 $select-option-transition:          background 300ms ease !default;
+$select-option-group-height:        32px !default;
 
 $select-disabled-bg:                $input-disabled-bg !default;
 $select-disabled-opacity:           $input-disabled-opacity !default;
