--- a/src/select/style.scss
+++ b/src/select/style.scss
@@ -51,6 +51,12 @@ $select-prefix: 'dk-select';
     color: $select-icon-color;
     user-select: none;
     z-index: 1;
+    transform: rotate(0deg);
+    transition: transform 200ms linear;
+
+    &-visible {
+      transform: rotate(180deg);
+    }
   }
 
   &-panel {
