! feat: card coolapse & accordion

--- a/src/card/style.scss
+++ b/src/card/style.scss
@@ -23,6 +23,10 @@ $card-prefix: 'dk-card';
 
     &-collapse {
       cursor: pointer;
+
+      &-visible {
+        background: $light;
+      }
     }
   }
 
