! feat: card coolapse height

--- a/src/card/style.scss
+++ b/src/card/style.scss
@@ -40,16 +40,17 @@ $card-prefix: 'dk-card';
       height: 0;
       transition: height 0.35s ease;
 
+      &-enter {
+        height: 0;
+      }
       &-visible,
       &-exit,
       &-enter-done {
         height: auto;
-        display: block;
       }
 
       &-exit-done {
         height: 0;
-        display: none;
       }
     }
   }
