--- a/src/card/style.scss
+++ b/src/card/style.scss
@@ -28,6 +28,19 @@ $card-prefix: 'dk-card';
         background: $light;
       }
     }
+
+    &-icon {
+      position: relative;
+      left: -4px;
+      font-size: $select-icon-size;
+      user-select: none;
+      transform: rotate(0deg);
+      transition: transform 200ms linear;
+
+      &-visible {
+        transform: rotate(90deg);
+      }
+    }
   }
 
   &-body {
