! feat: jest config

--- a/site/component/common/example.scss
+++ b/site/component/common/example.scss
@@ -1,6 +1,6 @@
 .example {
   width: 100%;
-  border: 1px solid #edf2f9;
+  border: 1px solid #d2ddec;
   background-color: #fff;
   margin-top: 24px;
 
@@ -134,7 +134,7 @@
 .example-info {
   position: relative;
   padding: 16px 30px 16px 24px;
-  border-top: 1px solid #edf2f9;
+  border-top: 1px solid #d2ddec;
 }
 
 .example-title {
