--- a/src/style/_reboot.scss
+++ b/src/style/_reboot.scss
@@ -4,16 +4,16 @@
 *::after {
   margin: 0;
   padding: 0;
-  box-sizing: border-box; // 1
+  box-sizing: border-box;
 }
 
 html {
-  font-family: sans-serif; // 2
-  line-height: 1.15; // 3
-  -webkit-text-size-adjust: 100%; // 4
-  -ms-text-size-adjust: 100%; // 4
-  -ms-overflow-style: scrollbar; // 5
-  -webkit-tap-highlight-color: rgba($black, 0); // 6
+  font-family: sans-serif;
+  line-height: 1.15;
+  -webkit-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
+  -ms-overflow-style: scrollbar;
+  -webkit-tap-highlight-color: rgba($black, 0);
 }
 
 // IE10+ doesn't honor `<meta name="viewport">` in some cases.
@@ -30,14 +30,15 @@ article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
 }
 
 body {
-  margin: 0; // 1
+  margin: 0;
+  padding: 0;
   font-family: $font-family-base;
   font-size: $font-size-base;
   font-weight: $font-weight-base;
   line-height: $line-height-base;
   color: $body-color;
-  text-align: left; // 3
-  background-color: $body-bg; // 2
+  text-align: left;
+  background-color: $body-bg;
 }
 
 [tabindex="-1"]:focus {
@@ -45,9 +46,9 @@ body {
 }
 
 hr {
-  box-sizing: content-box; // 1
-  height: 0; // 1
-  overflow: visible; // 2
+  box-sizing: content-box;
+  height: 0;
+  overflow: visible;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -83,17 +84,12 @@ h6 {
   font-size: $h6-font-size;
 }
 
-// p {
-//   margin-top: 0;
-//   margin-bottom: 16px;
-// }
-
 abbr[title],
-abbr[data-original-title] { // 4
-  text-decoration: underline; // 2
-  text-decoration: underline dotted; // 2
-  cursor: help; // 3
-  border-bottom: 0; // 1
+abbr[data-original-title] {
+  text-decoration: underline;
+  text-decoration: underline dotted;
+  cursor: help;
+  border-bottom: 0;
 }
 
 address {
@@ -206,52 +202,13 @@ svg {
 
 // Tables
 //
-
 table {
-  width: 100%;
-  background-color: transparent;
-  border-collapse: collapse;
-  vertical-align: middle;
-  background-color: #fff;
+  border-collapse: collapse; // Prevent double borders
 }
 
 th {
-  padding: 15px;
   text-align: inherit;
-  font-weight: 600;
-  letter-spacing: .08em;
-  // text-transform: uppercase;
-  color: #95aac9;
-  vertical-align: bottom;
-  border-top: 1px solid #edf2f9;
-  border-bottom: 1px solid #edf2f9;
-  background-color: #f9fbfd;
-  font-size: $font-size-sm;
 }
-
-td {
-  padding: 15px;
-  vertical-align: top;
-  font-size: 15px;
-  border-bottom: 1px solid #edf2f9;
-}
-
-// Forms
-//
-
-// label {
-//   display: inline-block;
-//   margin-bottom: 8px;
-// }
-
-// button {
-//   border-radius: 0;
-// }
-
-// button:focus {
-//   outline: 1px dotted;
-//   outline: 5px auto -webkit-focus-ring-color;
-// }
 
 input,
 button,
@@ -318,13 +275,13 @@ fieldset {
 legend {
   display: block;
   width: 100%;
-  max-width: 100%; // 1
+  max-width: 100%;
   padding: 0;
   margin-bottom: .5rem;
   font-size: 1.5rem;
   line-height: inherit;
-  color: inherit; // 2
-  white-space: normal; // 1
+  color: inherit;
+  white-space: normal;
 }
 
 progress {
@@ -356,8 +313,8 @@ progress {
 //
 
 ::-webkit-file-upload-button {
-  font: inherit; // 2
-  -webkit-appearance: button; // 1
+  font: inherit;
+  -webkit-appearance: button;
 }
 
 //
