! feat: use babel7 to transform ts files

--- a/src/style/_reboot.scss
+++ b/src/style/_reboot.scss
@@ -165,6 +165,7 @@ a {
   text-decoration: $link-decoration;
   background-color: transparent;
   -webkit-text-decoration-skip: objects;
+  transition: color 250ms ease;
 
   &:hover {
     color: $link-hover-color;
