--- a/site/components/common/page.scss
+++ b/site/components/common/page.scss
@@ -20,3 +20,14 @@
 #demos {
   margin-bottom: 20px;
 }
+
+.index-title {
+  padding-top: 30px;
+  text-align: center;
+}
+
+.index-desc {
+  color: #95aac9;
+  font-size: 18px;
+  text-align: center;
+}
