--- a/site/components/app.scss
+++ b/site/components/app.scss
@@ -20,7 +20,7 @@
 
   &-content {
     position: relative;
-    padding-top: 24px;
+    padding: 24px;
     min-height: calc(100vh - 72px - 36px);
     background-color: #fff;
 
@@ -100,31 +100,6 @@
 }
 
 @media only screen and (min-width : 320px) and (max-width : 568px) {
-  .app-sidebar {
-    left: 0;
-    right: 0;
-    width: 100%;
-    height: 0;
-    overflow: unset;
-    border-right: 0;
-  }
-
-  .sidebar-menu {
-    position: absolute;
-    top: 0;
-    right: 0;
-    width: 250px;
-    height: 100vh;
-    transform: translate3d(100%, 0, 0);
-    transition: all .25s cubic-bezier(.5,0,.2,1);
-    justify-content: center;
-    z-index: 10;
-
-    &-slide {
-      transform: translate3d(0, 0, 0);
-    }
-  }
-
   .app-layout {
     width: 100%;
     margin-left: 0;
@@ -134,12 +109,13 @@
     padding: 12px 12px 0;
   }
 
-  .api-container {
-    table {
-      line-height: 1.5;
-    }
-    th, td {
-      padding: 8px;
-    }
+  table {
+    line-height: 1.5;
+    overflow-x: scroll;
+  }
+
+  th, td {
+    padding: 8px;
+    white-space: nowrap;
   }
 }
