! feat: seperate style

--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -17,10 +17,10 @@
 
 // Form
 //
-@import '../card/style.scss';
 @import '../radio/style.scss';
 @import '../checkbox/style.scss';
 @import '../switch/style.scss';
+@import '../input/style.scss';
 @import '../calendar/style.scss';
 @import '../select/style.scss';
 @import '../form/style.scss';
