! feat: rebuild style

--- a/src/modal/style.scss
+++ b/src/modal/style.scss
@@ -1,6 +1,6 @@
-@import '../style/functions';
-@import '../style/theme';
-@import '../style/mixins';
+@import '../style/functions.scss';
+@import '../style/theme.scss';
+@import '../style/mixins.scss';
 
 $prefix-cls: 'dk-modal';
 
