--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -1,6 +1,6 @@
-@import 'functions';
-@import 'theme';
-@import 'mixins';
+@import 'functions.scss';
+@import 'theme.scss';
+@import 'mixins.scss';
 @import 'reset.scss';
 
 // Basic
