--- a/site/components/app.scss
+++ b/site/components/app.scss
@@ -58,6 +58,8 @@
     pre[class*="language-"] {
       padding: 16px 24px;
       margin-bottom: 0;
+      overflow-x: scroll;
+      overflow-y: hidden;
     }
 
     :not(pre)>code[class*="language-"],
