! feat: form invalid status

--- a/src/input/style.scss
+++ b/src/input/style.scss
@@ -37,6 +37,13 @@ $prefix-cls: 'dk-input';
     font-size: $font-size-lg;
   }
 
+  @each $type,
+  $color in $input-type-colors {
+    &-#{$type} {
+      @include input-variant($color);
+    }
+  }
+
   &::placeholder {
     color: $input-placeholder-color;
     opacity: 1;
