--- a/src/style/mixins.scss
+++ b/src/style/mixins.scss
@@ -13,8 +13,8 @@
 @import "./mixins/alert.scss";
 @import "./mixins/buttons.scss";
 @import "./mixins/grid.scss";
+@import "./mixins/forms.scss";
 // @import "mixins/badge";
 // @import "mixins/breakpoints";
 // @import "mixins/lists";
-// @import "mixins/forms";
 // @import "mixins/table-row";
