--- a/src/form/style.scss
+++ b/src/form/style.scss
@@ -51,13 +51,43 @@ $form-prefix: 'dk-form';
       }
     }
 
-    &-tips {
-      font-size: 12px;
-      line-height: 1;
-      padding-top: 4px;
+    &-message {
       position: absolute;
       top: 100%;
       left: 0;
+      padding-top: $form-message-padding-y;
+      font-size: $form-message-font-size;
+      line-height: 1;
+      transform-origin: 0 0;
+
+      &-enter {
+        opacity: 0;
+        transform: scaleY(0);
+      }
+
+      &-enter-active {
+        opacity: 1;
+        transform: scaleY(1);
+        transition: transform 0.216s, opacity 0.216s ease-in;
+      }
+
+      &-exit {
+        opacity: 1;
+        transform: scaleY(1);
+      }
+
+      &-exit-active {
+        opacity: 0;
+        transform: scaleY(0);
+        transition: transform 0.216s, opacity 0.216s ease-out;
+      }
+
+      @each $type,
+      $color in $input-type-colors {
+        &-#{$type} {
+          color: $color;
+        }
+      }
     }
   }
 }
