--- a/src/style/theme.scss
+++ b/src/style/theme.scss
@@ -450,6 +450,7 @@ $modal-type-colors: (
 
 // Form
 //
+$form-item-height:                      $input-height !default;
 $form-margin-y:                         24px !default;
 $form-label-height:                     $input-height !default;
 $form-label-padding-x:                  12px !default;
